--- a/ocpp-v1_6/build.gradle
+++ b/ocpp-v1_6/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testCompile 'junit:junit:4.13.2'
     testCompile 'org.mockito:mockito-core:4.11.0'
     testCompile 'org.hamcrest:hamcrest-core:1.3'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
 }
 
 task javadocJar(type: Jar) {
